Implemented ZOOM_record_error which returns error information for
record (surrogate diagnostic).

--- 2.1.38 2006/10/31

Updates for SRU Update by Ko van der Sloot:
1. Changed name from "operation" to "action"
2. Fixed that that "recordIdentifier" was called "recordId". Kept the old
versions in the code, marked as 'backward compatible'.
3. Added diagnostics for SRU Update.

Fixed bug #709: Records are fetched in wrong format when tasks are queued.

Fixed bug #707: CQL->RPN ignores lines with leading spaces.

Fixed bug #706: XML hex encoding UTF-8 chars out of range 0-255.

For GFS, fixed problem with SRU diagnostic 'First record position out of
range' being issued for 0 hits.

zoomtst10 part of Windows Build.

--- 2.1.36 2006/10/13

Implemented yaz_filepath_comp which splits a path into file path
components (required by Zebra 2.0.3+).

Change wording of YAZ license to the 'Revised BSD License'. YAZ has used a
BSD inspired license until now so this should not have any real impact on
anybody. See http://www.opensource.org/licenses/bsd-license.php

Fixed bug #687: Missing log lines.

Fixed bug #678: CQL to PQF translation does not preserve double-quote
escaping.

Fixed bug #689: SRU diagnostics to be added.

Implemented new ZOOM function, ZOOM_connection_is_idle, which checks
whether a connection is idle (no more work do do).

--- 2.1.34 2006/10/04

Change type of optval from long to int for invocation of setsockopt with
the SO_REUSEADDR option. Thanks to Ateeq A. Altaf, Talis.

Added support for specifying the max log file size for the Generic
Frontend Server. The size is given with option -r.

--- 2.1.32 2006/09/21

Fix problem introduced in YAZ 2.1.28 WRT unix sockets in the ZOOM code.

--- 2.1.30 2006/09/17

Fixes for getaddrinfo use, Bugs #655 + #660. These bugs were introduced
in YAZ 2.1.28.

Fixed bug in Generic Frontend Server that could cause a server to stop
accepting new connections. Bug only seen on dual CPU Windows 2003 server.
